labels instead of placeholder text; fixed spacing

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,7 +1,7 @@
 
 .sign-up-container {
-    height: 370px;
-    width: 500px;
+    height: 470px;
+    width: 460px;
     border: 2px solid black;
     border-radius: 8px;
     /* border: 2px solid red; */
@@ -10,30 +10,46 @@
 .form-div {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 7px;
     /* margin-left: 20px;
     margin-right: 20px; */
     /* border: 2px solid red; */
 }
 
+.signup-section-div {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+    margin-right: 25px;
+    /* gap: 5px; */
+}
 
-input {
+label {
+    color: black;
+    font-size: medium;
+    /* border: solid 1px red; */
+}
+
+.signup-section-div input {
+    width: 100%;
     border: 2px solid black;
-    margin: 0 auto;
-    height: 20px;
+    box-sizing: border-box; 
+    height: 25px;
 }
 
 .sign-up-button {
     height: 35px;
-    width: 450px;
+    /* width: 450px; */
     background-color: #9AAB89;
     color: white;
     padding: 7px 15px;
     border: none;
     /* border-radius: 6px; */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
-    
+    margin-top: 5px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .sign-up-button:hover {
